<resources>
    <string name="app_name">PostApp_lxy</string>
    <string name="pass_hint">Your password</string>
    <string name="email_hint">Your Email</string>
    <string name="login_btn_text">Login to account</string>
    <string name="login_reg_btn_text">Need a new Account</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Setting</string>
    <string name="action_logout_text">Logout</string>
    <string name="reg_btn_text">Create New Account</string>
    <string name="reg_login_text">Already have an Account</string>
    <string name="reg_pass_text">Password :</string>
    <string name="reg_confirm_pass_text">Confirm Password :</string>
    <string name="setup_name_hint"><![CDATA[Your Name >>]]></string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="post_desc_hint">Add Description</string>
    <string name="new_post_btn_hint">Post Blog</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notification</string>
    <string name="bottom_ac_text">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //parse server connect settings:
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <!-- Paste BOTH strings as required -->
    <string name="back4app_app_id">y4ffRo7hbkw5L17RTjBdSd4u1usBEHLzJZ4RCeht</string>
    <string name="back4app_client_key">8ppJ0bbrGGsevSu3iVy3uJ4tIwDx6tsF3INyCIww</string>
    <string name="reply_btn">REPLY</string>

</resources>